# scomics

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 02.deg_morcom26_cux2mice_ENCTX_plan.md  04.num_archetype_dombrovski25_plan.md  14.label_transfer_cheng22_to_morcom26_plan.md  23.boxplot_mean_norm_expr_by_sample_plan.md  plan_per_sample_analysis.md  rename_scomics_plan.md
plan/astro/: 01.compute_gao25_astro_plan.md  04.num_archetype_p56_plan.md  05.num_archetype_p56_nopc2_plan.md  15.sequential_knn_label_transfer_plan.md  19.archetype_scores_plan.md
plan/morcom26/: 01.explore_morcom26_cux2mice_plan.md
scripts/: 01.tutorial_per_sample.py  02.num_archetype_3d_ndim3.py  02.num_archetypes.py  03.num_archetype_rep.py  04.num_archetype_dombrovski25.py  common.py  format_table.sh  tutorial_complete.py  tutorial_minimum.py  viz.py
scripts/astro/: 01.compute.py  02.visualize.py  04.num_archetype_p56.py  05.num_archetype_p56_nopc2.py  06.num_archetype_p56_nopc2_ndim3.py  07.num_archetype_p28.py  08.num_archetype_p56_nn3.py  09.num_archetype_p56_nn3_nopc2.py  10.archetype_p56_nn3_nopc2_noc2_genes.py  11.archetype_p56_nopc2_noc2_genes.py  12.archetype_p56_nopc2_noc4_genes.py  13.archetype_p56_nopc2_noc4_project_ages.py  14.archetype_p56_nopc2_noc4_project_ages_viz.py  (+7 more)
scripts_data_wrangling/: 00.load_dombrowski25_fly.py  02.deg_morcom26_cux2mice_ENCTX.py  03.scrnaseq_morcom26_cux2mice.py  04.umap_metadata.py  05.boxplot_metadata.py  06.barplot_composition.py  08.umap_metadata.py  10.pca_metadata.py  11.pca_gene_expression.py  12.umap_gene_expression.py
(+34 files in other folders)
