[project]
name = "SingleCellArchetype"
version = "0.1.0"
description = "Archetypal Analysis of scRNA-seq data"
authors = [
    {name = "Fangming Xie", email = "fmxie1993@gmail.com"}
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]